# mc-status-rs

./: Cargo.toml
src/: main.rs
