[package]
name = "mc-status-rs"
version = "0.1.0-alpha.1"
edition = "2021"

[dependencies]
base64 = "0.13.0"
mime = "0.3.16"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
trust-dns-resolver = { version = "0.22.0", features = ["dns-over-rustls"] }
url = "2.3.1"
uuid = { version = "1.1.2", features = ["serde"] }
