[package]
name = "mc-status-rs"
version = "0.1.0-alpha.1"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.0.0"
mime = "0.3.16"
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
termcolor = "1.1.3"
trust-dns-resolver = { version = "0.23.2", features = ["dns-over-rustls"] }
url = "2.3.1"
uuid = { version = "1.1.2", features = ["serde"] }
